# mantel-technical-interview

./: README.md  kohonen.ipynb  pyproject.toml
src/: kohonen.py  main.py  original.py
tests/: test_kohonen.py
